[package]
name = "todox"
version = "0.0.1"
edition = "2021"
authors = ["Gokhan Ozturk"]
description = "A simple CLI todo list application"
license = "MIT"
repository = "https://github.com/gokh4nozturk/todox"
keywords = ["cli", "todo", "task", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
dirs = "5.0"
